--- a/_posts/2021-09-01-Main.md
+++ b/_posts/2021-09-01-Main.md
@@ -1,6 +1,6 @@
 ---
-title: "Information ecology"
-last_modified_at: 2023-02-26
+title: "Main"
+date: 2023-02-26
 categories:
   - Conceptual framework
 tags:
