--- a/_posts/2023-03-01-News.md
+++ b/_posts/2023-03-01-News.md
@@ -8,6 +8,8 @@ tags:
   - publication
   - fund
 ---
+2023-04-03: Open positions for master/semester projects! [link](https://informationecology.github.io/openpositions/)
+
 2023-03-01: Welcome Flurina Zahn to do her bachelor thesis in the group!
 
 2022-11-15: Welcome Dr. Yan Yang to join the group for a postdoc supported by China Scholarship Council!
