--- a/_posts/2023-03-01-News.md
+++ b/_posts/2023-03-01-News.md
@@ -8,6 +8,16 @@ tags:
   - publication
   - fund
 ---
+2024-02-19: Open positions for master/semester projects! [link](https://informationecology.github.io/openpositions/)
+
+2024-01-10: Biology24 meeting at Zurich will happen soon! We are also organizing a workshop with mind-blowing keynote talks on self-organization in complex systems [link] (https://biology24.ch/)
+
+2023-11-01: Fieldwork in Mexico has been successfully conducted! Well done Yan!
+
+2023-08-01: Summer fieldwork in Calanda has finished! It was a beautiful season and very productive work!
+
+2023-06-05: Bee symposium with talks by Dr. Yan Yang, Dr. Minqiang Wang and Dr. Michael Orr
+
 2023-04-03: Open positions for master/semester projects! [link](https://informationecology.github.io/openpositions/)
 
 2023-03-01: Welcome Flurina Zahn to do her bachelor thesis in the group!
