--- a/_posts/2023-03-01-News.md
+++ b/_posts/2023-03-01-News.md
@@ -8,6 +8,11 @@ tags:
   - publication
   - fund
 ---
+2024-08-25: We are at ICE (International Congress of Entomology) in Kyoto! Come and join our talks if you are also there! 
+ - Yan's talk, 26 Aug. Monday 10:00 Room H
+ - Zu's talk, 27 Aug. Tuesday 15:15 Room C-2
+ - Roberto's talk, 29 Aug. Thursday 18:00 Room C-1
+
 2024-02-19: Open positions for master/semester projects! [link](https://informationecology.github.io/openpositions/)
 
 2024-01-10: Biology24 meeting at Zurich will happen soon! We are also organizing a workshop with mind-blowing keynote talks on self-organization in complex systems [link] (https://biology24.ch/)
