--- a/_posts/2023-03-01-News.md
+++ b/_posts/2023-03-01-News.md
@@ -8,6 +8,8 @@ tags:
   - publication
   - fund
 ---
+2024-11-01: Congrats to Zu on her appointment as Assistant Professor at the University of Neuchatel, starting February 2025! New PhD and postdoc positions are available! Don't hesitate to reach out.
+
 2024-08-25: We are at ICE (International Congress of Entomology) in Kyoto! Come and join our talks if you are also there! 
  - Yan's talk, 26 Aug. Monday 10:00 Room H
  - Zu's talk, 27 Aug. Tuesday 15:15 Room C-2
