--- a/_posts/2023-03-01-News.md
+++ b/_posts/2023-03-01-News.md
@@ -8,6 +8,8 @@ tags:
   - publication
   - fund
 ---
+2025-04: Welcome Kofi (PhD), Subi (master), Eleonora (bachelor) and Victor (civil service) to join the group!
+
 2025-03-01: Welcome Jérôme Cavailles to join the group as a postdoc researcher working on theoretical ecology!
 
 2024-11-01: Congrats to Zu on her appointment as Assistant Professor at the University of Neuchatel, starting February 2025! New PhD and postdoc positions are available! Don't hesitate to reach out. [link](https://informationecology.github.io/openpositions/)
