--- a/_posts/2023-03-01-News.md
+++ b/_posts/2023-03-01-News.md
@@ -8,6 +8,10 @@ tags:
   - publication
   - fund
 ---
+2025-08: Welcome our lab manager Amelie to join the group!
+
+2025-07: Welcome Song (PhD) to join the group!
+
 2025-04: Welcome Kofi (PhD), Subi (master), Eleonora (bachelor) and Victor (civil service) to join the group!
 
 2025-03-01: Welcome Jérôme Cavailles to join the group as a postdoc researcher working on theoretical ecology!
